--- a/src/HomePage/IntroSection/IntroSection.scss
+++ b/src/HomePage/IntroSection/IntroSection.scss
@@ -1,10 +1,12 @@
 
 @use 'helpers/general' as *;
 @use 'helpers/colors';
+@use 'sass:color';
 
 .IntroSection{
 
-    margin-top: 4rem;
+    margin-top: 3rem;
+    margin-bottom: 1000px;
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 1.5fr;
@@ -16,7 +18,7 @@
         grid-template-columns: unset;
         max-width: 40rem;
         @include respondToSmallMaxSize{
-            margin-top: 3rem;
+            margin-top: 1.3rem;
         }
     }
   
