--- a/src/index.scss
+++ b/src/index.scss
@@ -4,10 +4,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
 
 
+*{
+    margin: 0;
+	padding: 0.02px;
+}
 
 body {
-	margin: 0;
-	padding: 0;
+	
 	font-family: Rubik;
 	color: colors.$off-black-title;
 }
